--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ author: SeungHyeon-Hong(ko.홍승현) #GitHub User
 copyright: "Unpublished Work (cleft) 2021-{currentYear} {author}"
 
 description: >- # this means to ignore newlines until "baseurl:"
-You found me! :D
+You found me! ;D
 #   Write an awesome description for your new site here. You can edit this
 #   line in _config.yml. It will appear in your document head meta (for
 #   Google search results) and in your feed.xml site description.
