--- a/_config.yml
+++ b/_config.yml
@@ -196,7 +196,7 @@ defaults:
 #   redirect_uri: "Your redirect url"   # If you use a custom domain name
 
 # Build settings
- highlighter: github #none
+# highlighter: github #none
 markdown: kramdown
 kmarkdown:
   input: GFM
