--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://seunghyeon-hong.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
-favicon: "assets/img/favicon_wing.png" # the favicon for your site
+favicon: "assets/img/favicon_wing_128.png" # the favicon for your site
 
 # Yat date format
 # refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this
@@ -149,10 +149,10 @@ lang: "ko"  # default lang is en
 # this and add the path to the pages in order as they should show up
 header_pages:
   - index.html
-  - archives.html
+  - about.html #md
   - categories.html
   - tags.html
-  - about.md
+  - archives.html
 
 # Page default value
 defaults:
