--- a/_config.yml
+++ b/_config.yml
@@ -158,7 +158,7 @@ header_pages:
 defaults:
   home:
     heading: "프로젝트 소개" #"Your awesome heading"
-    subheading: "포트폴리오 & 기술소개서 & 프로젝트 경력서" #"Your awesome subheading"
+    subheading: "기술소개서 & 프로젝트 경력서" #"Your awesome subheading"
     banner: "Your image url"
 
 # Banner default settings
