--- a/_config.yml
+++ b/_config.yml
@@ -150,8 +150,9 @@ lang: "ko"  # default lang is en
 header_pages:
   - index.html
   - about.html #md
+  - summary.html #개요 추가.
   - categories.html
-  - tags.html
+#   - tags.html
   - archives.html
 
 # Page default value
