Update _config.yml nightmode off
nightmode off

--- a/_config.yml
+++ b/_config.yml
@@ -136,6 +136,7 @@ lang: "ko"  # default lang is en
 # the browser is closed or not)
 #
 # night_mode: "auto"
+night_mode: "off"
 
 # Code badge setting
 # You can enable or disable the code badge and so on
