--- a/_config.yml
+++ b/_config.yml
@@ -136,7 +136,7 @@ lang: "ko"  # default lang is en
 # the browser is closed or not)
 #
 # night_mode: "auto"
-night_mode: "off"
+night_mode: "on/off"
 
 # Code badge setting
 # You can enable or disable the code badge and so on
